@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-06-28T12:15:33Z",
-  "count_outdated" : 4350,
-  "uniques_outdated" : 2120,
+  "timestamp" : "2024-06-30T00:43:42Z",
+  "count_outdated" : 4352,
+  "uniques_outdated" : 2122,
   "count" : 4402,
   "uniques" : 2153,
   "clones" : [
-    {
-      "timestamp": "2024-06-15T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2024-06-17T00:00:00Z",
       "count": 5,
