@@ -1,12 +1,7 @@
 {
-  "count": 52,
-  "uniques": 27,
+  "count": 50,
+  "uniques": 26,
   "clones": [
-    {
-      "timestamp": "2024-06-15T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2024-06-17T00:00:00Z",
       "count": 5,
